xy to tikz: triangle in sec 5.2.1
The style is slightly different, but now we have a real equilateral
triangle.

--- a/subgroups.tex
+++ b/subgroups.tex
@@ -59,8 +59,17 @@ The proposition $\ismono(i)$ is equivalent to saying that $\USymi:\USymH\to \USy
   \label{ex:sigma2inSigma3}
    \marginnote{
      That $i:\Sigma_2\to\Sigma_3$ is a monomorphism can visualized as follows: if $\Sigma_3$ represent all symmetries of an equilateral triangle in the plane (with vertices $1$, $2$, $3$), then $i$ is represented by the inclusion of the symmetries leaving $3$ fixed; \ie reflection through the line marked with dots in the picture.
-   $$\xymatrix{&3\ar@{.}[dd]&\\&&\\
-    1\ar@{-}[uur]\ar@{-}[rr]&&2\ar@{-}[uul]}$$}
+   \[
+     \begin{tikzpicture}[scale=1.5]
+       \path (0:0)  node (one)   {$1$}
+             (0:2)  node (two)   {$2$}
+             (60:2) node (three) {$3$};
+       \draw (one) -- (two);
+       \draw (two) -- (three);
+       \draw (three) -- (one);
+       \draw[dotted] (three) -- (0:1);
+     \end{tikzpicture}
+   \]}
 Consider the  homomorphism $i:\Sigma_2\to\Sigma_3$ of permutation groups corresponding to sending $A:\BSG_2\defequi \FinSet_2$ to $A+\bn1:\BSG_3$.
 %This is a monomorphism since $\US i:\USym\Sigma_2\to\USym\Sigma_3$ is an injection.
 \end{example}
