xy to tikz: convert the Ker f diagram

--- a/subgroups.tex
+++ b/subgroups.tex
@@ -312,9 +312,23 @@ Another proof of $\coker f$ being a transitive $G'$-set would be to say that sin
 \begin{xca}
   Given a homomorphism $f:\Hom(G,G')$, prove that
     \marginnote{Hint: consider the corresponding property of the preimage of $\Bf$.
-      $$\xymatrix{L\ar[drr]^h\ar@{.>}[dr]^{k}\ar[ddr]&&\\
-        &\Ker f\ar[r]_{\incl_{\ker f}}\ar[d]&G\ar[d]^f\\
-        &{1}\ar[r]&\,G'.}$$}
+    \[
+      \begin{tikzpicture}[scale=1.5]
+        \path (-1,1) node (L)   {$L$}
+              (0,0)  node (Ker) {$\Ker f$}
+              (1,0)  node (G)   {$G$}
+              (0,-1) node (one) {$1$}
+              (1,-1) node (G')  {$G'$};
+        \draw[->,dotted] (L) -- node[above right] {$k$} (Ker);
+        \draw[->] (L) to[bend left] node[above right] {$h$} (G);
+        \draw[->] (L) to[bend right] (one);
+        \draw[->] (Ker) -- node[below] {$\incl_{\ker f}$} (G);
+        \draw[->] (Ker) -- (one);
+        \draw[->] (G) -- node[right] {$f$} (G');
+        \draw[->] (one) -- (G');
+      \end{tikzpicture}
+    \]
+    }
   \begin{enumerate}
   \item $f$ is a monomorphism if and only if the kernel is trivial
   \item $f$ is an epimorphims if and only if the cokernel is contractible.
